fix: Increase snackbar's z-index
Developers *usually* set their overlaying element's  to  or less, which will place them on top of the snackbar, which is why the snackbar element's   was increased to .

--- a/src/css/snackbar.css
+++ b/src/css/snackbar.css
@@ -24,7 +24,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 999;
+  z-index: 999999;
   background-color: var(--snackbar-background-color, #202020);
   transform: translateY(100px);
   will-change: transform;
